part/archivemodel.cpp
@@ -449,7 +449,7 @@ void ArchiveModel::newEntry(Archive::Entry *receivedEntry, InsertBehaviour behav
         const auto size = receivedEntry->property("size").toULongLong();
         const auto compressedSize = receivedEntry->property("compressedSize").toULongLong();
         for (auto i = m_propertiesMap.begin(); i != m_propertiesMap.end(); ++i) {
-            // Singlefile plugin doesn't report the uncompressed size.
+            // libarchive plugin doesn't report the uncompressed size for "single-file" archives.
             if (i.key() == Size && size == 0 && compressedSize > 0) {
                 continue;
             }
